Fix the alignment on the image and the body text

--- a/css/main.css
+++ b/css/main.css
@@ -72,7 +72,7 @@ a:hover {
   }
 
   h1 {
-    margin-top: .6em;
+    margin-top: .3em;
     margin-bottom: .3em;
   }
 }
@@ -85,15 +85,31 @@ a:hover {
     line-height: 1.4;
   }
 
+  h1 {
+    margin-top: .9em;
+    margin-left: .15em;
+    margin-bottom: .47em;
+  }
+
   body {
     display: inline-block;
-    text-align: left;
     max-width: 50%;
     vertical-align: middle;
   }
 
-  img {
-    display: inline-block;
+  strong {
+    margin-left: .15em;
+    margin-top: .5em;
+  }
+
+  p {
+    margin-left: .15em;
+    margin-bottom: 1em;
+    vertical-align: middle;
+  }
+
+  .img-flex {
+    display: block;
     vertical-align: middle;
     width: 100%;
   }
